--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -4,7 +4,11 @@
 	border:0;
 }
 .ui-dialog .ui-dialog-title{
-	padding:4px 8px;
+	padding:12px 12px;
+	background:none !important;
+}
+.ui-dialog .ui-dialog-buttonpane{
+	margin-bottom:4px;
 }
 .ui-dialog .ui-dialog-titlebar-close{
 	float:right;
