--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -6,6 +6,7 @@
 .ui-dialog .ui-dialog-title{
 	padding:12px 0 0 12px;
 	background:none !important;
+	font-size:24px;
 }
 .ui-dialog .ui-dialog-titlebar-close{
 	float:right;
