--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -7,6 +7,7 @@
 	padding:12px 0 0 12px;
 	background:none !important;
 	font-size:24px;
+	line-height:24px;
 }
 .ui-dialog .ui-dialog-titlebar-close{
 	float:right;
