--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -8,6 +8,8 @@
 	background:none !important;
 	font-size:24px;
 	line-height:24px;
+	position:relative;
+	top:4px;
 }
 .ui-dialog .ui-dialog-titlebar-close{
 	float:right;
