--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -3,13 +3,16 @@
 .ui-dialog .ui-dialog-buttonpane{
 	border:0;
 }
+.ui-dialog .ui-dialog-content{
+	padding:8px;
+}
 .ui-dialog .ui-dialog-title{
 	padding:12px 0 0 12px;
 	background:none !important;
 	font-size:24px;
 	line-height:24px;
 	position:relative;
-	top:4px;
+	top:3px;
 }
 .ui-dialog .ui-dialog-titlebar-close{
 	float:right;
@@ -18,8 +21,7 @@
 .ui-dialog .ui-resizable-handle{
 	display:none !important;
 }
-
-.ui-dialog .ui-dialog-buttonpane button{
+.ui-dialog .ui-dialog-buttonpane{
 	margin:4px;
 }
 .ui-dialog .ui-dialog-buttonset button:last-child{
