fix message box line height

--- a/content-backend/assets/css/application.css
+++ b/content-backend/assets/css/application.css
@@ -390,6 +390,7 @@ button,
 
 .correspondence > .message {
 	padding-left: 170px;
+	line-height:20px !important;
 }
 
 .assignment-owner.correspondence > .user-details {
