fix message box line height

--- a/content-backend/assets/css/application.css
+++ b/content-backend/assets/css/application.css
@@ -388,7 +388,7 @@ button,
 	margin-top: 10px;
 }
 
-.correspondence > .message {
+.message {
 	padding-left: 170px;
 	line-height:20px !important;
 }
