Can radio buttons be pretty now?

--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -2,6 +2,10 @@
 	width:400px;
 	border-radius:0px;
 }
+.perimeter_security_system,
+.remote_start_system{
+	text-align:center;
+}
 .ui-dialog{
 	z-index: 9999;
 }
