Can radio buttons be pretty now?

--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -1,6 +1,7 @@
 .vehicle label.ui-button-text-only{
 	width:400px;
 	border-radius:4px;
+	margin:0 auto;
 }
 .perimeter_security_system .ui-radios,
 .remote_start_system .ui-radios{
